force-app/main/default/objects/SRQI_Exemption__c/SRQI_Exemption__c.object-meta.xml
<CustomObject>
    <description>Exemption record for services that have been granted an exemption from either the CER, SCR, QI or CM rating domains</description>
    <label>Exemption</label>
    <nameField>
        <displayFormat>EX-{00000}</displayFormat>
        <label>Exemption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exemptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>