force-app/main/default/objects/SRQI_Exemption__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>It determines if the exemption is active or not based on start and finish date.</description>
    <formula>IF( Exemption_Start__c &lt;=  TODAY() &amp;&amp;  Exemption_Finish__c &gt;=  TODAY() , true, false)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>