force-app/main/default/objects/SRQI_Exemption__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Rationale behind the granting of this exemption</description>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>