force-app/main/default/objects/SRQI_Exemption__c/fields/Exemption_Finish__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Finish__c</fullName>
    <description>Date exemption is no longer in force</description>
    <label>Exemption Finish</label>
    <type>Date</type>
</CustomField>