force-app/main/default/objects/SRQI_Exemption__c/fields/Exemption_Start__c.field-meta.xml
<CustomField>
    <fullName>Exemption_Start__c</fullName>
    <description>Date the exemption begins</description>
    <label>Exemption Start</label>
    <type>Date</type>
</CustomField>