force-app/main/default/objects/SRQI_Exemption__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>It describes reason for exemption, and it will also be used when generating CER Rating record for exempt services</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Service</fullName>
                <label>New provider</label>
            </value>
            <value>
                <fullName>Transferred Service</fullName>
                <label>Transfer of ownership</label>
            </value>
            <value>
                <fullName>Business Exemption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>