force-app/main/default/objects/SRQI_Exemption__c/fields/Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Removal_Reason__c</fullName>
    <description>reason for Removing Exemption</description>
    <label>Removal Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>