force-app/main/default/objects/SRQI_Exemption__c/fields/Remover__c.field-meta.xml
<CustomField>
    <fullName>Remover__c</fullName>
    <description>Who removed the exemption</description>
    <label>Remover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>