force-app/main/default/objects/SRQI_Exemption__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Exemptions</relationshipLabel>
    <relationshipName>Service</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>