force-app/main/default/objects/SRQI_Exemption__c/fields/Service_Account_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_Relationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It indicates which service account relationship record the exemption record is linked to.</description>
    <label>Service Account Relationship</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Service in Service Account Relationship must match service in Exemption record.</errorMessage>
        <filterItems>
            <field>$Source.Service__c</field>
            <operation>equals</operation>
            <valueField>Service_Account_Relationship__c.Service_Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Account_Relationship__c</referenceTo>
    <relationshipLabel>Exemptions</relationshipLabel>
    <relationshipName>ExemptionsSAR</relationshipName>
    <type>Lookup</type>
</CustomField>