force-app/main/default/objects/SRQI_Exemption__c/fields/ServiceID__c.field-meta.xml
<CustomField>
    <fullName>ServiceID__c</fullName>
    <formula>Service__r.Integration_ID__c</formula>
    <label>ServiceID</label>
    <type>Text</type>
</CustomField>