force-app/main/default/objects/SRQI_Exemption__c/recordTypes/CER_Exemption.recordType-meta.xml
<RecordType>
    <fullName>CER_Exemption</fullName>
    <active>true</active>
    <description>Exemption from CER requirements</description>
    <label>CER Exemption</label>
</RecordType>