force-app/main/default/objects/SRQI_Exemption__c/recordTypes/CM_Exemption.recordType-meta.xml
<RecordType>
    <fullName>CM_Exemption</fullName>
    <active>true</active>
    <description>Exemption from CM requirements</description>
    <label>CM Exemption</label>
</RecordType>