force-app/main/default/objects/SRQI_Exemption__c/recordTypes/QI_Exemption.recordType-meta.xml
<RecordType>
    <fullName>QI_Exemption</fullName>
    <active>true</active>
    <description>Exemption from QI Requirements</description>
    <label>QI Exemption</label>
</RecordType>