force-app/main/default/objects/SRQI_Exemption__c/recordTypes/SCR_Exemption.recordType-meta.xml
<RecordType>
    <fullName>SCR_Exemption</fullName>
    <active>true</active>
    <description>Exemption from SCR Requirements</description>
    <label>SCR Exemption</label>
</RecordType>