force-app/main/default/objects/SRQI_Exemption__c/recordTypes/Star_Rating_Exemption.recordType-meta.xml
<RecordType>
    <fullName>Star_Rating_Exemption</fullName>
    <active>true</active>
    <description>Excludes a specific residential service from the calculation of all Star Ratings</description>
    <label>Star Rating Exemption</label>
</RecordType>