force-app/main/default/objects/SRQI_Exemption__c/validationRules/Exemption_Finish_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Exemption_Finish_Date</fullName>
    <active>true</active>
    <description>It ensures that exemption&apos;s finish date is current or in future AND is not older than start date</description>
    <errorConditionFormula>(Exemption_Finish__c &lt; TODAY() || Exemption_Finish__c &lt;  Exemption_Start__c) &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>Exemption_Finish__c</errorDisplayField>
    <errorMessage>The End Date must not be earlier than today&apos;s date or the Start Date.</errorMessage>
</ValidationRule>