force-app/main/default/objects/SRQI_Exemption__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>ServiceID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Exemption_Start__c</columns>
    <columns>Exemption_Finish__c</columns>
    <columns>Approver__c</columns>
    <columns>Comments__c</columns>
    <columns>Reason__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SRQI_Exemption__c.CER_Exemption,SRQI_Exemption__c.CM_Exemption,SRQI_Exemption__c.QI_Exemption</value>
    </filters>
    <filters>
        <field>Approver__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Service__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ServiceID__c</field>
        <operation>contains</operation>
    </filters>
    <label>All</label>
</ListView>